added some notation macros

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -144,6 +144,8 @@
 \newcommand{\mm}{\ensuremath{\underline{m}}}
 \newcommand{\pp}{\ensuremath{\underline{p}}}
 \newcommand{\kk}{\ensuremath{\underline{k}}}
+\newcommand{\kplus}{\ensuremath{\underline{k+1}}}
+\newcommand{\kminus}{\ensuremath{\underline{k-1}}}
 %% \newcommand{\ul}{\ensuremath{\underline{\ell}}}
 %% \newcommand{\vzero}{\ensuremath{\mathbf{0}}}
 \newcommand{\vzero}{\ensuremath{\eta}}
@@ -152,6 +154,7 @@
 \newcommand{\utwo}{\ensuremath{\underline{2}}}
 \newcommand{\uthree}{\ensuremath{\underline{3}}}
 
+\newcommand{\AsqBool}{\ensuremath{A^2 \times \{0,1\}}}
 \newcommand{\sA}{\ensuremath{\mathcal{A}}}
 \newcommand{\scA}{\ensuremath{\mathscr{A}}}
 \newcommand{\sV}{\ensuremath{\mathcal{V}}}
