fixed margin draft markings

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -436,10 +436,10 @@ MRREVIEWER = {Ivan Chajda},
   angle=-90,
   nodeanchor=east,
   vshift=-1cm,
-  hshift=2cm,
+  hshift=8cm,
   opacity=1,
-  scale=1.5,
-  contents={\textcolor{gray!80}{WORK IN PROGRESS!  DO NOT DISEMINATE! (compiled on \today\ at \currenttime)}}
+  scale=1,
+  contents={\textcolor{gray!80}{WORK IN PROGRESS.  DO NOT DISTRIBUTE. (compiled on \today\ at \currenttime)}}
 }
 %%  wjd ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
