lots of improvements

--- a/DiffTerm/inputs/rflatexmacs.sty
+++ b/DiffTerm/inputs/rflatexmacs.sty
@@ -220,11 +220,11 @@
 %\DeclareMathOperator{\ityp}{\mathbf{i}}
 %\DeclareMathOperator{\jtyp}{\mathbf{j}}
 %
-\newcommand{\otyp}{\textbf{0}}
-\newcommand{\utyp}{\textbf{1}}
-\newcommand{\atyp}{\textbf{2}}
-\newcommand{\btyp}{\textbf{3}}
-\newcommand{\ltyp}{\textbf{4}}
-\newcommand{\styp}{\textbf{5}}
-\newcommand{\ityp}{\textbf{i}}
-\newcommand{\jtyp}{\textbf{j}}
+\newcommand{\otyp}{\textbf{0}\xspace}
+\newcommand{\utyp}{\textbf{1}\xspace}
+\newcommand{\atyp}{\textbf{2}\xspace}
+\newcommand{\btyp}{\textbf{3}\xspace}
+\newcommand{\ltyp}{\textbf{4}\xspace}
+\newcommand{\styp}{\textbf{5}\xspace}
+\newcommand{\ityp}{\textbf{i}\xspace}
+\newcommand{\jtyp}{\textbf{j}\xspace}
