--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1550,29 +1550,21 @@ for $T \subseteq \Clo_3(\alg{A})$ and $S \subseteq A^2 \times \{0,1\}$,
   \Inv(S) &= \{t \in \Clo_3(\alg{A}) \mid t \bowtie s
   \text{ for all } s \in S\}.
 \end{align*}
-In other words, the set of local difference term operations 
-for $S$ is $\Inv(S)$. We $S$ is finite,
- say $S = ((a_0, b_0, \chi_0), \dots, (a_n, b_n, \chi_n)$,
- where usually write $\Inv((a_0, b_0, \chi_0), \dots, (a_n, b_n, \chi_n))$.
+In other words, $\Inv(S)$ is the set of \ld terms
+for $S$, and $\Fix(T)$ is the set of triples for which every $t\in T$ is an \ld term.
 
-The subset of
-$A^2\times \{0,1\}$ for which every $t\in T$ is an \ld term
-is denoted by $\Fix(T)$
+We may take $S$ to be a finite list,
+say $S = ((a_0, b_0, \chi_0), \dots, (a_n, b_n, \chi_n))$;
+in such cases $\Inv((a_0, b_0, \chi_0), \dots, (a_n, b_n, \chi_n))$
+will denote the set of \ld term operations for $S$.
 
 Now, suppose that every pair
-$(s_0, s_1) \in (\AsqBool)^2$ 
-has an \ld term. That is, suppose $\Inv(s_0, s_1)$ is nonempty.
-%%  there exists
-%% %% $(s_0, s_1)\in \sS^2$ there exists
-%% $\ell \in $ such that for each $i \in \{0,1\}$ we have
-%% \begin{align}
-%%   a_i \comr{\theta_{a_ib_i}} \ell(a_i,b_i,b_i), & \;
-%%   \text{ if $\chi_i=0$, and }  \label{eq:d-trip-i1}\\
-%%   \ell(a_i,a_i,b_i) =b_i, & \;
-%%   \text{ if $\chi_i=1$,}\label{eq:d-trip-i2} %\\\nonumber
-%% \end{align}
-Under this hypothesis we will prove that every subset $S\subseteq \AsqBool$
-has an \ld term.
+$(s_0, s_1)\in (\AsqBool)^2$ %$\AsqBool$ 
+has an \ld term.  
+% That is, suppose $\Inv(s_0, s_1)$ is nonempty for every 
+% pair $(s_0, s_1) \in (\AsqBool)^2$. 
+Then every subset $S\subseteq \AsqBool$
+has an \ld term, as we now prove.
 %% That is, there is a single term $\ell$ that satisfies
 %% (\ref{eq:d-trip-i1}) and (\ref{eq:d-trip-i2}) for all 
 %% $s_i = (a_i, b_i, \chi_i) \in S$.
@@ -1771,7 +1763,7 @@ and $\alg{A}$ has a difference term operation.
 
 % \draftsecskip
 
-\subsection{Algorithm to test existence of difference term operation}
+\subsection{Algorithm to test for existence of a difference term}
 \label{sec:algor-1}
 %% In this subsection we prove the following:
 %% \subsection*{Algorithm 1: existence of a difference term operation}
