--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -567,7 +567,7 @@ varieties they inhabit.  This is largely due to the efforts
 of researchers who, over the last three decades, have found ingenious
 ways to coax computers into solving challenging abstract algebraic
 decision problems, and to do so very quickly.
-To give a couple of examples related to our own work,, 
+To give a couple of examples related to our own work, 
 it is proved in~\cite{MR3239624} (respectively,~\cite{Freese:2009})
 that deciding whether a variety is congruence-$n$-permutable
 (respectively, congruence-modular) is \emph{tractable}.\footnote{To
